tests/ui/unrecognized_receiver.stderr
error: unrecognized receiver type
 --> tests/ui/unrecognized_receiver.rs:4:20
  |
1 | #[cxx::bridge]
  | -------------- in this procedural macro expansion
...
4 |         fn f(self: &Unrecognized);
  |                    ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
